--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <div class="ulist">
 <ul>
 <li>
-<p>Working on data migration from a locally hosted MS Access database to a cloud based solution</p>
+<p>Working on data migration from a locally hosted MS Access database to a cloud hosted solution</p>
 </li>
 <li>
 <p>Use of Microsoft OAuth APIs</p>
