--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ td.tableblock {
 <span id="email3" class="email"><a href="https://github.com/1rre" class="bare">https://github.com/1rre</a></span><br>
 </div>
 </div>
-<div id="content">
+<div id="content" style="margin-top: -40px;">
 <div class="sect1">
 <h2 id="_profile">Profile</h2>
 <div class="sectionbody">
