--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ td.tableblock {
 <span id="author3" class="author">github</span><br>
 <span id="email3" class="email"><a href="https://github.com/1rre" class="bare">https://github.com/1rre</a></span><br>
 </div>
-<hr>
+<hr style="margin-top: 0px;">
 </div>
 <div id="content" style="margin-top: -40px;">
 <div class="sect1">
