--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="website, email, github">
 <title>Timothy Moores</title>
 <style>
-@import url(http://red-hat-overpass-fonts.s3.amazonaws.com/overpass.css);
+@import url(https://red-hat-overpass-fonts.s3.amazonaws.com/overpass.css);
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ========================================================================== HTML5 display definitions ========================================================================== */
 /** Correct `block` display not defined in IE 8/9. */
