--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <meta name="author" content="website, email, github">
 <title>Timothy Moores</title>
 <style>
-@import url(https://overpass-30e2.kxcdn.com/overpass.css);
-@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Math&display=swap');
-
+@import url(http://red-hat-overpass-fonts.s3.amazonaws.com/overpass.css);
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ========================================================================== HTML5 display definitions ========================================================================== */
 /** Correct `block` display not defined in IE 8/9. */
@@ -197,7 +195,7 @@ a:hover, a:focus { color: #ea0011; }
 a img { border: none; }
 
 /* Default paragraph styles */
-p { font-family: "STIX Two Math script=latin rev=1","Helvetica Neue", Helvetica, "Liberation Sans", Arial, sans-serif; font-weight: normal; font-size: 0.9375em; line-height: 1.4; margin-bottom: 1.375em; text-rendering: optimizeLegibility; }
+p { font-family: "Helvetica Neue", Helvetica, "Liberation Sans", Arial, sans-serif; font-weight: normal; font-size: 0.9375em; line-height: 1.4; margin-bottom: 1.375em; text-rendering: optimizeLegibility; }
 p aside { font-size: 0.875em; line-height: 1.35; font-style: italic; }
 
 /* Default header styles */
@@ -714,7 +712,6 @@ table {
   min-width: 100%;
 }
 table.tableblock {
-  font-family: 'STIX Two Math', serif;
   margin-bottom: 2px;
   margin-top: 2px;
 }
@@ -723,7 +720,6 @@ td.tableblock {
   padding-bottom: 0;
   margin-bottom: 0;
   margin-top: 0;
-  font-family: 'STIX Two Math', serif;
 }
 .li2 > ul > li::marker {
   content: url("data:image/svg+xml;charset=UTF-8,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'><path d='M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z'/></svg>")
@@ -742,9 +738,8 @@ td.tableblock {
 <span id="author3" class="author">github</span><br>
 <span id="email3" class="email"><a href="https://github.com/1rre" class="bare">https://github.com/1rre</a></span><br>
 </div>
-<hr style="margin-top: 0px;">
 </div>
-<div id="content" style="margin-top: -40px;">
+<div id="content">
 <div class="sect1">
 <h2 id="_profile">Profile</h2>
 <div class="sectionbody">
@@ -778,7 +773,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <div class="ulist">
 <ul>
 <li>
-<p>Working on data migration from a locally hosted MS Access database to a cloud hosted solution</p>
+<p>Working on data migration from a locally hosted SQL database to a cloud based solution</p>
 </li>
 <li>
 <p>Use of Microsoft OAuth APIs</p>
@@ -810,7 +805,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>C:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤⬤⬤◯◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤⬤⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -822,7 +817,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>C++:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ◯◯◯◯◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br><br></p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -834,7 +829,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>Elixir:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤◯◯◯◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -848,7 +843,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>Erlang:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤⬤⬤⬤◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤⬤⬤⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -860,7 +855,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>Haskell:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ◯◯◯◯◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br><br></p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -872,7 +867,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>Java:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤◯◯◯◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -885,8 +880,8 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 </colgroup>
 <tbody>
 <tr>
-<td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>RISC Assembly:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤◯◯◯◯</p></td>
+<td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>RISC Assemblies:</strong></p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -898,7 +893,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>Scala:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤⬤⬤⬤◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤⬤⬤⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -910,7 +905,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <tbody>
 <tr>
 <td class="tableblock halign-center valign-middle"><p class="tableblock"><strong>Verilog:</strong></p></td>
-<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤ ⬤⬤◯◯◯</p></td>
+<td class="tableblock halign-left valign-middle"><p class="tableblock">⬤⬤⬤⬤⬤<br>⬤⬤</p></td>
 </tr>
 </tbody>
 </table></div></td>
@@ -970,7 +965,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <td class="tableblock halign-left valign-top"><div class="content"><div class="ulist li2">
 <ul>
 <li>
-<p><a href="https://github.com/1rre/NSys">NSys</a></p>
+<p><a href="https://github.com/1rre/roverscript">Roverscript</a></p>
 </li>
 </ul>
 </div></div></td>
