--- a/index.html
+++ b/index.html
@@ -749,7 +749,6 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 </div>
 </div>
 </div>
-<hr style="margin-bottom: -20px">
 <div class="sect1 data-line-24">
 <h2 id="_previous_employment">Previous Employment</h2>
 <div class="sectionbody">
@@ -787,7 +786,6 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 </div>
 </div>
 </div>
-<hr style="margin-bottom: -20px">
 <div class="sect1 data-line-35">
 <h2 id="_education">Education</h2>
 <div class="sectionbody">
@@ -799,31 +797,22 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <p>3rd (penultimate) year Computer Engineer @ Imperial College London</p>
 </li>
 <li class="data-line-38">
-<p>71% in Instruction Architectures and Compilers</p>
+<p>High 2:2 overall</p>
 </li>
 <li class="data-line-39">
-<p>89% in Compilers coursework</p>
-</li>
-<li class="data-line-40">
-<p>78% in Software Systems</p>
-</li>
-<li class="data-line-41">
-<p>75% in Programming for Engineers</p>
-</li>
-<li class="data-line-42">
 <p>Pass in level 1 (GCSE equivalent) Russian</p>
 </li>
 </ul>
 </div>
 </div>
-<div class="sect2 data-line-44">
+<div class="sect2 data-line-41">
 <h3 id="_high_school"><strong>High School</strong>:</h3>
-<div class="ulist data-line-45">
+<div class="ulist data-line-42">
 <ul>
-<li class="data-line-45">
+<li class="data-line-42">
 <p>A*AAA at A Level</p>
 </li>
-<li class="data-line-46">
+<li class="data-line-43">
 <p>A in GCSE German</p>
 </li>
 </ul>
@@ -831,11 +820,10 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 </div>
 </div>
 </div>
-<div class="sect1 data-line-48">
-<hr style="margin-bottom: -20px">
+<div class="sect1 data-line-45">
 <h2 id="_programming_languages">Programming Languages</h2>
 <div class="sectionbody">
-<table class="tableblock frame-all grid-all stripes-none stretch data-line-50">
+<table class="tableblock frame-all grid-all stripes-none stretch data-line-47">
 <colgroup>
 <col style="width: 33.3333%;">
 <col style="width: 33.3333%;">
@@ -960,11 +948,10 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 </table>
 </div>
 </div>
-<hr style="margin-bottom: -20px">
-<div class="sect1 data-line-99">
+<div class="sect1 data-line-96">
 <h2 id="_portfolio">Portfolio</h2>
 <div class="sectionbody">
-<table class="tableblock frame-none grid-cols stripes-none stretch data-line-102">
+<table class="tableblock frame-none grid-cols stripes-none stretch data-line-99">
 <colgroup>
 <col style="width: 33.3333%;">
 <col style="width: 33.3333%;">
