--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@ I enjoy team sports, being an active member of both the Waterpolo &amp; Handball
 <td class="tableblock halign-left valign-top"><div class="content"><div class="ulist li2">
 <ul>
 <li>
-<p><a href="https://github.com/1rre/NSys">NSys</a></p>
+<p><a href="https://github.com/1rre/exploring_uranus">EEE Rover</a></p>
 </li>
 </ul>
 </div></div></td>
