--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <div class="link-container">
         <a style="background-image: url(github.svg);" class="link_icon" href="https://github.com/1rre"></a>
         <a style="background-image: url(linkedin.svg);" class="link_icon" href="https://www.linkedin.com/in/timothy-moores/"></a>
+        <a style="background-image: url(maildotru.svg);" class="link_icon" href="mailto:info@tmoor.es"></a>
       </div>
     </div>
   </body>
