changed divs to singular

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         filter: invert(0.25);
       }
       .text-div {
-        margin-bottom: 20px;
+        text-align: center;
+        margin: 20px;
+        line-height: 40px;
       }
       .web-container {
         display: flex;
@@ -50,9 +52,11 @@
   <body>
     <div class="web-container">
       <div class="text-div" style="font-size: xxx-large;">HELLO</div>
-      <div class="text-div" style="font-size: large;">Website still under construction</div>
-      <div class="text-div" style="font-size: large;">In the meantime:</div>
-      <div class="text-div" style="font-size: large;">Check out my profiles</div>
+      <div class="text-div" style="font-size: large;">
+        Website still under construction<br>
+        In the meantime:<br>
+        Check out my profiles<br>
+      </div>
       <div class="link-container">
         <a style="background-image: url(github.svg);" class="link_icon" href="https://github.com/1rre"></a>
         <a style="background-image: url(linkedin.svg);" class="link_icon" href="https://www.linkedin.com/in/timothy-moores/"></a>
