Changed link format

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div class="web-container">
       <div class="text-div" style="font-size: xxx-large;">HELLO</div>
-      <div class="text-div" style="font-size: large;">
-        Check out my projects
+      <div class="text-div" style="font-size: x-large; margin-bottom: 0px;">
+        Check out my projects:
       </div>
       <div class="project-container">
         <div class="project-box">
@@ -41,31 +41,37 @@
             </div>
           </div>
         </div>
-        <a class="project-box" id="cpu-link" href="https://github.com/1rre/MIPS_CPU">
+        <div class="project-box" id="cpu-box">
+          <a class="overlay-link" href="https://github.com/1rre/MIPS_CPU"></a>
           <div class="project-inner">
             Mips CPU
           </div>
-        </a>
-        <a class="project-box" id="redstone-link" href="https://github.com/1rre/MinecraftPlugins">
+        </div>
+        <div class="project-box" id="redstone-box">
+          <a class="overlay-link" href="https://github.com/1rre/MinecraftPlugins"></a>
           <div class="project-inner">
             Redstone ICs
           </div>
-        </a>
-        <a class="project-box" id="pong-link" href="https://github.com/1rre/Pong">
+        </div>
+        <div class="project-box" id="pong-box">
+          <a class="overlay-link" href="https://github.com/1rre/Distributed_Pong"></a>
           <div class="project-inner">
           Pong
           </div>
-        </a>
-        <a class="project-box" id="rover-link" href="https://github.com/1rre/exploring_uranus">
+        </div>
+        <div class="project-box" id="rover-box">
+          <a class="overlay-link" href="https://github.com/1rre/exploring_uranus"></a>
           <div class="project-inner">
             EEE Rover
           </div>
-        </a>
-        <a class="project-box" id="script-link" href="https://github.com/1rre/RoverScript">
+        </div>
+        <div class="project-box" id="script-box">
+          <a class="overlay-link" href="https://github.com/1rre/RoverScript"></a>
+          
           <div class="project-inner">
             RoverScript
           </div>
-        </a>
+        </div>
       </div>
       <div class="text-div" style="font-size: large;">
         Check out my profiles
