Added other projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Check out my projects:
       </div>
       <div class="project-container">
-        <div class="project-box">
+        <div class="project-box" id="compiler-box">
           <a class="overlay-link" href="https://github.com/1rre/compiler"></a>
           <div class="project-inner">
             <div id="compiler-status-bar">
@@ -67,9 +67,20 @@
         </div>
         <div class="project-box" id="script-box">
           <a class="overlay-link" href="https://github.com/1rre/RoverScript"></a>
-          
           <div class="project-inner">
             RoverScript
+          </div>
+        </div>
+        <div class="project-box" id="website-box">
+          <a class="overlay-link" href="https://github.com/1rre/1rre.github.io"></a>
+          <div class="project-inner">
+            Website
+          </div>
+        </div>
+        <div class="project-box" id="circuit-box">
+          <a class="overlay-link" href="https://github.com/1rre/CircuitSim"></a>
+          <div class="project-inner">
+            Circuit Simulator
           </div>
         </div>
       </div>
