Changed to use canvas for links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
@@ -15,73 +16,57 @@
         Check out my projects:
       </div>
       <div class="project-container">
-        <div class="project-box" id="compiler-box">
-          <a class="overlay-link" href="https://github.com/1rre/compiler"></a>
-          <div class="project-inner">
-            <div id="compiler-status-bar">
-              <div style="width: 5%;"></div>
-              Compiler
-              <div style="width: 45%;"></div>
-              <div id="compiler-close"><div>X</div></div>
-            </div>
-            <div id="compiler-terminal">
-              abcdefghijklmnopqrstuvwxyz12345<br>
-              2<br>
-              3<br>
-              4<br>
-              5<br>
-              6<br>
-              7<br>
-              8<br>
-              9<br>
-              10<br>
-              11<br>
-              12<br>
-              13<br>
-            </div>
-          </div>
-        </div>
+        <a href="https://github.com/1rre/compiler">
+          <canvas class="project-box" id="compiler-box"></canvas>
+        </a>
         <div class="project-box" id="cpu-box">
-          <a class="overlay-link" href="https://github.com/1rre/MIPS_CPU"></a>
-          <div class="project-inner">
-            Mips CPU
-          </div>
+          <a href="https://github.com/1rre/MIPS_CPU">
+            <div class="project-inner">
+              Mips CPU
+            </div>
+          </a>
         </div>
         <div class="project-box" id="redstone-box">
-          <a class="overlay-link" href="https://github.com/1rre/MinecraftPlugins"></a>
-          <div class="project-inner">
-            Redstone ICs
-          </div>
+          <a href="https://github.com/1rre/MinecraftPlugins">
+            <div class="project-inner">
+              Redstone ICs
+            </div>
+          </a>
         </div>
         <div class="project-box" id="pong-box">
-          <a class="overlay-link" href="https://github.com/1rre/Distributed_Pong"></a>
-          <div class="project-inner">
-          Pong
-          </div>
+          <a href="https://github.com/1rre/Distributed_Pong">
+            <div class="project-inner">
+            Pong
+            </div>
+          </a>
         </div>
         <div class="project-box" id="rover-box">
-          <a class="overlay-link" href="https://github.com/1rre/exploring_uranus"></a>
-          <div class="project-inner">
-            EEE Rover
-          </div>
+          <a href="https://github.com/1rre/exploring_uranus">
+            <div class="project-inner">
+              EEE Rover
+            </div>
+          </a>
         </div>
         <div class="project-box" id="script-box">
-          <a class="overlay-link" href="https://github.com/1rre/RoverScript"></a>
-          <div class="project-inner">
-            RoverScript
-          </div>
+          <a href="https://github.com/1rre/RoverScript">
+            <div class="project-inner">
+              RoverScript
+            </div>
+          </a>
         </div>
         <div class="project-box" id="website-box">
-          <a class="overlay-link" href="https://github.com/1rre/1rre.github.io"></a>
-          <div class="project-inner">
-            Website
-          </div>
+          <a href="https://github.com/1rre/1rre.github.io">
+            <div class="project-inner">
+              Website
+            </div>
+          </a>
         </div>
         <div class="project-box" id="circuit-box">
-          <a class="overlay-link" href="https://github.com/1rre/CircuitSim"></a>
-          <div class="project-inner">
-            Circuit Simulator
-          </div>
+          <a href="https://github.com/1rre/CircuitSim">
+            <div class="project-inner">
+              Circuit Simulator
+            </div>
+          </a>
         </div>
       </div>
       <div class="text-div" style="font-size: large;">
