Added other boxes, finished CPU

--- a/index.html
+++ b/index.html
@@ -1,83 +1,76 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-  <head>
-    <title>Timothy Moores</title>
-    <link rel="icon" href="">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
-  </head>
-  <body>
-    <div class="web-container">
-      <div class="text-div" style="font-size: xxx-large;">HELLO</div>
-      <div class="text-div" style="font-size: x-large; margin-bottom: 0px;">
-        Check out my projects:
-      </div>
-      <div class="project-container">
-        <a href="https://github.com/1rre/compiler">
-          <canvas class="project-box" id="compiler-box"></canvas>
-        </a>
-        <div class="project-box" id="cpu-box">
-          <a href="https://github.com/1rre/MIPS_CPU">
-            <div class="project-inner">
-              Mips CPU
-            </div>
-          </a>
-        </div>
-        <div class="project-box" id="redstone-box">
-          <a href="https://github.com/1rre/MinecraftPlugins">
-            <div class="project-inner">
-              Redstone ICs
-            </div>
-          </a>
-        </div>
-        <div class="project-box" id="pong-box">
-          <a href="https://github.com/1rre/Distributed_Pong">
-            <div class="project-inner">
-            Pong
-            </div>
-          </a>
-        </div>
-        <div class="project-box" id="rover-box">
-          <a href="https://github.com/1rre/exploring_uranus">
-            <div class="project-inner">
-              EEE Rover
-            </div>
-          </a>
-        </div>
-        <div class="project-box" id="script-box">
-          <a href="https://github.com/1rre/RoverScript">
-            <div class="project-inner">
-              RoverScript
-            </div>
-          </a>
-        </div>
-        <div class="project-box" id="website-box">
-          <a href="https://github.com/1rre/1rre.github.io">
-            <div class="project-inner">
-              Website
-            </div>
-          </a>
-        </div>
-        <div class="project-box" id="circuit-box">
-          <a href="https://github.com/1rre/CircuitSim">
-            <div class="project-inner">
-              Circuit Simulator
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="text-div" style="font-size: large;">
-        Check out my profiles
-      </div>
-      <div class="link-container">
-        <a style="background-image: url(assets/github.svg);" class="link_icon" href="https://github.com/1rre"></a>
-        <a style="background-image: url(assets/linkedin.svg);" class="link_icon" href="https://www.linkedin.com/in/timothy-moores/"></a>
-        <a style="background-image: url(assets/maildotru.svg);" class="link_icon" href="mailto:info@tmoor.es"></a>
-      </div>
+
+<head>
+  <title>Timothy Moores</title>
+  <link rel="icon" href="">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+
+<body>
+  <div class="web-container">
+    <div class="text-div" style="font-size: xxx-large;">HELLO</div>
+    <div class="text-div" style="font-size: x-large; margin-bottom: 0px;">
+      Check out my projects:
     </div>
-    <script type="text/javascript" src="assets/out.js"></script>
-  </body>
+    <div class="project-container">
+      <a class="project-box" href="https://github.com/1rre/compiler">
+        <canvas class="project-inner" id="compiler-box">
+          Compiler
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/MIPS_CPU">
+        <canvas class="project-inner" id="cpu-box">
+          Mips CPU
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/MinecraftPlugins">
+        <canvas class="project-inner" id="redstone-box">
+          Redstone ICs
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/Distributed_Pong">
+        <canvas class="project-inner" id="pong-box">
+          Pong
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/exploring_uranus">
+        <canvas class="project-inner" id="rover-box">
+          EEE Rover
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/Scalayout">
+        <canvas class="project-inner" id="scalayout-box">
+          Scalayout
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/1rre.github.io">
+        <canvas class="project-inner" id="website-box">
+          Website
+        </canvas>
+      </a>
+      <a class="project-box" href="https://github.com/1rre/CircuitSim">
+        <canvas class="project-inner" id="circuit-box">
+          Circuit Simulator
+        </canvas>
+      </a>
+    </div>
+
+    <div class="text-div" style="font-size: large;">
+      Check out my profiles
+    </div>
+    <div class="link-container">
+      <a style="background-image: url(assets/github.svg);" class="link_icon" href="https://github.com/1rre"></a>
+      <a style="background-image: url(assets/linkedin.svg);" class="link_icon"
+        href="https://www.linkedin.com/in/timothy-moores/"></a>
+      <a style="background-image: url(assets/maildotru.svg);" class="link_icon" href="mailto:info@tmoor.es"></a>
+    </div>
+  </div>
+  <script type="text/javascript" src="assets/out.js"></script>
+</body>
+
 </html>
