Changed profiles to "get in touch"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="text-div" style="font-size: large;">
-      Check out my profiles
+      Get in touch
     </div>
     <div class="link-container">
       <a style="background-image: url(assets/github.svg);" class="link_icon" href="https://github.com/1rre"></a>
