--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="project-container">
       <a class="project-box" href="https://github.com/1rre/compiler">
         <canvas class="project-inner" id="compiler-box">
-          Compiler
+          C Compiler
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/MIPS_CPU">
