--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/MinecraftPlugins">
+        <div class="project-inner" style="position: absolute; text-align: center;">
+          Redstone ICs<br><br>
+          Animation under construction
+        </div>
         <canvas class="project-inner" id="redstone-box">
           Redstone ICs
         </canvas>
@@ -44,16 +48,28 @@
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/Scalayout">
+        <div class="project-inner" style="position: absolute; text-align: center;">
+          Scalayout<br><br>
+          Animation under construction
+        </div>
         <canvas class="project-inner" id="scalayout-box">
           Scalayout
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/1rre.github.io">
+        <div class="project-inner" style="position: absolute; text-align: center;">
+          Website<br><br>
+          Animation under construction
+        </div>
         <canvas class="project-inner" id="website-box">
           Website
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/CircuitSim">
+        <div class="project-inner" style="position: absolute; text-align: center;">
+          Circuit Simulator<br><br>
+          Animation under construction
+        </div>
         <canvas class="project-inner" id="circuit-box">
           Circuit Simulator
         </canvas>
