--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
+  <img src="assets/grassBlock.jpg" id="mc-grass" style="width: 0;">
 </head>
 
 <body>
@@ -29,10 +30,6 @@
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/MinecraftPlugins">
-        <div class="project-inner" style="position: absolute; text-align: center;">
-          Redstone ICs<br><br>
-          Animation under construction
-        </div>
         <canvas class="project-inner" id="redstone-box">
           Redstone ICs
         </canvas>
