Changed scalayout to parser

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
           EEE Rover
         </canvas>
       </a>
-      <a class="project-box" href="https://github.com/1rre/Scalayout">
+      <a class="project-box" href="https://github.com/1rre/ScalaParsers">
         <div class="project-inner" style="position: absolute; text-align: center;">
-          Scalayout<br><br>
+          Lexer/Parser<br><br>
           Animation under construction
         </div>
-        <canvas class="project-inner" id="scalayout-box">
-          Scalayout
+        <canvas class="project-inner" id="parser-box">
+          Lexer/Parser
         </canvas>
       </a>
       <a class="project-box" href="https://github.com/1rre/1rre.github.io">
