--- a/icswp.html
+++ b/icswp.html
@@ -2,5 +2,5 @@
 <html lang="en-gb">
 
 <body>
-  <script type="text/javascript">window.location.href="https://forms.office.com/Pages/ResponsePage.aspx?id=B3WJK4zudUWDC0-CZ8PTB0fp3DiyLlpItpYGW8AniBhUMDFIQUFQTE4wSzBEVUVNV1kyTkNWV0JLSi4u"</script>
+  <script type="text/javascript">window.location.href="https://imperiallondon-my.sharepoint.com/:x:/g/personal/swimmn_ic_ac_uk/EaxHrsapto1Dsvj0BR8vC7EBMW4PPFHCS26fesS-1_Ec9g?e=Hy4zIK&CID=fb683352-21ce-192d-568f-0d84e7e47380"</script>
 </body>
