set html charset

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Timothy Moores</title>
+  <meta charset="UTF-8">
   <link rel="icon" href="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,26 +50,6 @@
           Lexer/Parser
         </canvas>
       </a>
-      <!--
-      <a class="project-box" href="https://github.com/1rre/1rre.github.io">
-        <div class="project-inner" style="position: absolute; text-align: center;">
-          Website<br><br>
-          Animation under construction
-        </div>
-        <canvas class="project-inner" id="website-box">
-          Website
-        </canvas>
-      </a>
-      <a class="project-box" href="https://github.com/1rre/CircuitSim">
-        <div class="project-inner" style="position: absolute; text-align: center;">
-          Circuit Simulator<br><br>
-          Animation under construction
-        </div>
-        <canvas class="project-inner" id="circuit-box">
-          Circuit Simulator
-        </canvas>
-      </a>
-      !-->
     </div>
 
     <div class="text-div" style="font-size: large;">
