--- a/isword.html
+++ b/isword.html
@@ -1,59 +1,117 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Wiktionary Definition Fetcher</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    input, button { font-size: 1rem; padding: 8px; }
+    ul { margin-top: 10px; }
+  </style>
 </head>
 <body>
   <h1>Wiktionary Definition Lookup</h1>
   <input type="text" id="wordInput" placeholder="Enter a word">
-  <button onclick="fetchDefinition()">Get Definition</button>
-  <pre id="output"></pre>
+  <button id="fetchBtn">Get Definition</button>
+  <div id="output"></div>
 
-  <script>
-    async function fetchDefinition() {
-      const word = document.getElementById('wordInput').value.trim();
-      const output = document.getElementById('output');
+<script>
+  function stripHTML(html) {
+    const tempDiv = document.createElement('div');
+    tempDiv.innerHTML = html;
+    
+    // Remove <a> tags but keep their text
+    tempDiv.querySelectorAll('a').forEach(a => {
+      const text = document.createTextNode(a.textContent);
+      a.replaceWith(text);
+    });
+  
+    // Remove <figure> and other non-text elements
+    tempDiv.querySelectorAll('figure, img, script, style').forEach(el => el.remove());
+    
+    return tempDiv.textContent || tempDiv.innerText || '';
+  }
 
-      if (!word) {
-        output.textContent = 'Please enter a word.';
-        return;
+  const wordInput = document.getElementById('wordInput');
+  const fetchBtn = document.getElementById('fetchBtn');
+  const output = document.getElementById('output');
+
+  let currentController = null;
+
+  async function fetchDefinitionWithRetry(word, retries = 3, delay = 1000, signal) {
+    wordInput.value = "";
+    const url = `https://en.wiktionary.org/api/rest_v1/page/definition/${encodeURIComponent(word)}?redirect=false`;
+
+    for (let attempt = 1; attempt <= retries; attempt++) {
+      try {
+        const response = await fetch(url, { signal });
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+        return await response.json();
+      } catch (error) {
+        if (signal.aborted) throw new Error("Request was cancelled.");
+        if (attempt === retries) throw error;
+        await new Promise(res => setTimeout(res, delay));
+      }
+    }
+  }
+
+  async function fetchDefinition() {
+    const word = wordInput.value.trim();
+    output.innerHTML = '';
+
+    if (!word) {
+      output.textContent = 'Please enter a word.';
+      return;
+    }
+
+    // Cancel previous request if any
+    if (currentController) {
+      currentController.abort();
+    }
+
+    currentController = new AbortController();
+    const { signal } = currentController;
+
+    output.textContent = 'Fetching definition...';
+
+    try {
+      const data = await fetchDefinitionWithRetry(word, 3, 1000, signal);
+      const definitions = [];
+
+      if (data.en) {
+        data.en.forEach(entry => {
+          if (entry.language === "English") {
+            entry.definitions.forEach(def => {
+              const cleanText = stripHTML(def.definition);
+              if (cleanText.trim()) {
+                definitions.push(cleanText.trim());
+              }
+            });
+          }
+        });
       }
 
-      const url = `https://en.wiktionary.org/api/rest_v1/page/definition/${encodeURIComponent(word)}?redirect=false`;
-
-      try {
-        const response = await fetch(url);
-        if (!response.ok) {
-          throw new Error(`HTTP error! status: ${response.status}`);
-        }
-        const data = await response.json();
-        if (data.en) {
-          out = []
-          for (let i = 0; i < data.en.length; i++) {
-            if (data.en[i].language == "English") {
-              console.log(JSON.stringify(data.en[i]));
-              for (let j = 0; j < data.en[i].definitions.length; j++) {
-                out.push(data.en[i].definitions[j].definition);
-              }
-            }
-          }
-          output.textContent = "Word:"
-          let innerHtml = "";
-          for (let i = 0; i < out.length; i++) {
-            let newNode = `<li>${out[i].trim()}</li>`;
-            innerHtml += newNode;
-            console.log(newNode);
-          }
-          output.innerHTML = `Word:<ul>${innerHtml}</ul>`;
-        } else {
-          output.textContent = "Not a word, Ming...";
-        }
-      } catch (error) {
+      if (definitions.length > 0) {
+        const listItems = definitions.map(def => `<li>${def}</li>`).join('');
+        output.innerHTML = `<strong>Definitions for "${word}":</strong><ul>${listItems}</ul>`;
+      } else {
+        output.textContent = `No English definitions found for "${word}".`;
+      }
+    } catch (error) {
+      if (error.name === 'AbortError') {
+        console.log('Previous request aborted.');
+      } else {
         output.textContent = `Error fetching definition: ${error.message}`;
       }
     }
-  </script>
+  }
+
+  // Event listeners
+  fetchBtn.addEventListener('click', fetchDefinition);
+  wordInput.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter') fetchDefinition();
+  });
+</script>
+
 </body>
 </html>
